增加了一个前端学院的第二次更新。

--- a/前端学院.html
+++ b/前端学院.html
@@ -34,11 +34,16 @@
             height: 800px;
         }
         .banner-mid{background: url("");}
-
+        .banner-down{height: 700px;overflow: hidden;}
+        .banner-down>div{
+            float: left;
+            margin-left:11.25% ;
+            margin-top: 120px;
+        }
     </style>
     <link type="text/css" href="轮播图.css" rel="stylesheet">
     <script src="jquery-2.0.0.min.js"></script>
-    <script></script>
+    <script src="轮播图.js"> </script>
 </head>
 <body style="position: relative;">
 
@@ -65,10 +70,10 @@
             <li><img src="images/轮播图001.jpg" ></li>
             <li><img src="images/轮播图002.jpg"> </li>
             <li><img src="images/轮播图003.jpg" ></li>
-            <li></li>
+
         </ul>
-         <div class="left-arrow"></div>
-         <div class="right-arrow"></div>
+         <div class="left-arrow" ></div>
+         <div class="right-arrow" ></div>
     </div>
 
 
@@ -80,6 +85,26 @@
 
 <div class="banner-mid">
 <img src="img/前端学院设计图-(1)_18.png" style="width: 100%;">
+
 </div>
+<div class="banner-down">
+
+    <h1 style="font-family: Montserrat;font-size: 42px;font-weight: lighter;text-align: center;margin-top: 117px;">Try Our Products</h1>
+    <div style="width: 17%;text-align: center;">
+        <img src="img/前端学院设计图-(1)_21.png">
+        <p style="font-size: 16px;margin-top: 33px;font-weight: lighter;">Li Jun, a China Academy of Engineering academician and also director of the alliance's experts' committee, said that China will also launch design guidance for smart cars, smart map architecture and standards for test grounds.</p>
+    </div>
+    <div style="width: 17%;text-align: center;">
+        <img src="img/前端学院设计图-(1)_24.png">
+        <p style="font-size: 16px;margin-top: 33px;font-weight: lighter;">Li said the smart car industry is able to enlarge the current car industry by 1 trillion yuan ($158.15 billion) and also able to boost fast development in 5G, internet of cars, big data, artificial intelligence and new-energy vehicles.</p>
+    </div>
+    <div style="width: 17%;text-align: center;">
+        <img src="img/前端学院设计图-(1)_27.png">
+        <p style="font-size: 16px;margin-top: 33px;font-weight: lighter;">Zhang Junyi, a partner with NIO Capital, said that the smart car is the trend for the car industry and China's auto sector will usher in a new key development stage with the improvement of infrastructure, technology, policies and laws.</p>
+    </div>
+</div>
+
+
+
 </body>
 </html>
