增加了一个前端学院的第三次更新。

--- a/前端学院.html
+++ b/前端学院.html
@@ -40,6 +40,19 @@
             margin-left:11.25% ;
             margin-top: 120px;
         }
+        .mian-produce{
+            height: 999px;
+            width: 100%;
+            position: relative;
+        }
+        .mian-produce>img{
+            width: 37.5%;
+
+        }
+        .mian-produce2{
+            width: 100%;
+            position: relative;
+        }
     </style>
     <link type="text/css" href="轮播图.css" rel="stylesheet">
     <script src="jquery-2.0.0.min.js"></script>
@@ -102,6 +115,33 @@
         <img src="img/前端学院设计图-(1)_27.png">
         <p style="font-size: 16px;margin-top: 33px;font-weight: lighter;">Zhang Junyi, a partner with NIO Capital, said that the smart car is the trend for the car industry and China's auto sector will usher in a new key development stage with the improvement of infrastructure, technology, policies and laws.</p>
     </div>
+</div>
+
+
+<div class="mian-produce">
+    <img src="img/前端学院设计图-(1)_33.png" style="position: absolute;top: 130px;left: 273px;">
+    <div style="position:absolute;font-weight: lighter;top:191px;left: 985px;">
+    <h3 style="font-weight: normal;">Learn How to Improve Your Personal Business</h3>
+    <p style="position: absolute;font-weight: lighter;margin-top: 40px;">Li Jun, a China Academy of Engineering academician and also director of the alliance's experts' committee, said that China will also launch design guidance for smart cars, smart map architecture and standards for test grounds.</p>
+    </div>
+    <img src="img/前端学院设计图-(1)_37.png "style="position: absolute;top: 543px;right: 114px;">
+    <div style="position: absolute;font-weight: lighter;top: 543px;left: 17%;">
+    <h3 style="font-weight: normal;  ">Choose Between Two Beautifully Designed Color Schemes.</h3>
+     <p></p>
+
+    </div>
+</div>
+
+<div class="mian-produce2">
+     <div style="left:314px;position: absolute;width: 30%;text-align: center;">
+         <h3 style="font-weight: normal;margin: 30px 0 30px 0;">Fell free to Write Us</h3>
+         <input type="text" style="background-color: transparent;border: 1px darkgrey solid;width: 80%;height: 30px;margin-bottom: 30px;padding: 4px 10px 4px 10px;" placeholder="Email">
+         <input type="text" style="background-color: transparent;border: 1px darkgrey solid;width: 80%;height: 30px;margin-bottom: 30px;padding: 4px 10px 4px 10px;" placeholder="Subject">
+         <label>
+             <textarea style="background-color: transparent;border: 1px darkgrey solid;width: 80%;height: 140px;padding: 4px 10px 4px 10px;margin-bottom: 30px;"></textarea>
+         </label>
+         <input type="submit" style="background-color:black;color:white;width: calc(80% + 20px);margin-top:20px;height: 40px;border: 1px solid black;" value="SEND">
+     </div>
 </div>
 
 
