--- a/前端学院.html
+++ b/前端学院.html
@@ -52,6 +52,26 @@
         .mian-produce2{
             width: 100%;
             position: relative;
+            height: 700px;
+        }
+        .footer{
+            height: 410px;
+            width: 100%;
+            background-color: black;
+        }
+        .footer-p{
+            font-family: Montserrat;
+            color: white;
+            text-align: center;
+
+        }
+
+        a{
+            text-decoration: none;
+            display: block;
+            margin-top: 20px;
+            color: darkgrey;
+            cursor: pointer;
         }
     </style>
     <link type="text/css" href="轮播图.css" rel="stylesheet">
@@ -131,20 +151,33 @@
 
     </div>
 </div>
-
 <div class="mian-produce2">
-     <div style="left:314px;position: absolute;width: 30%;text-align: center;">
+     <div style="left:314px;position: absolute;width: 30%;text-align: center;border: 1px solid darkgrey;">
          <h3 style="font-weight: normal;margin: 30px 0 30px 0;">Fell free to Write Us</h3>
          <input type="text" style="background-color: transparent;border: 1px darkgrey solid;width: 80%;height: 30px;margin-bottom: 30px;padding: 4px 10px 4px 10px;" placeholder="Email">
          <input type="text" style="background-color: transparent;border: 1px darkgrey solid;width: 80%;height: 30px;margin-bottom: 30px;padding: 4px 10px 4px 10px;" placeholder="Subject">
          <label>
              <textarea style="background-color: transparent;border: 1px darkgrey solid;width: 80%;height: 140px;padding: 4px 10px 4px 10px;margin-bottom: 30px;"></textarea>
          </label>
-         <input type="submit" style="background-color:black;color:white;width: calc(80% + 20px);margin-top:20px;height: 40px;border: 1px solid black;" value="SEND">
+         <input type="submit" style="background-color:black;color:white;width: calc(80% + 20px);margin-top:20px;height: 40px;border: 1px solid black;margin-bottom: 40px;" value="SEND">
      </div>
+    <div style="left:808px;position: absolute;">
+        <img src="img/前端学院设计图-(1)_03.png">
+    </div>
+
 </div>
 
 
+<div class="footer">
+<div class="footer-p">
+    <h1 style="font-family: Montserrat;font-size: 42px;font-weight: lighter;text-align: center;margin-top: 117px;color: white;">Learn More</h1>
+    <a href="">How it works?</a>
+    <a href="">Meeting tools</a>
+    <a href="">Live streaming</a>
+    <a href="">Contact method</a>
+</div>
+
+</div>
 
 </body>
 </html>
