--- a/前端学院.html
+++ b/前端学院.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>前端学院</title>
+    <link href="font-awesome-4.7.0/font-awesome-4.7.0/css/font-awesome.min.css" type="text/css" rel="stylesheet">
+    <link href="font-awesome-4.7.0/font-awesome-4.7.0/css/font-awesome.css" type="text/css" rel="stylesheet">
+    <!--<link rel="stylesheet" href="http://fontawesome.io/assets/font-awesome/css/font-awesome.css">-->
+    <script src="jquery-2.0.0.min.js"></script>
     <style>
         *{
             padding: 0;
@@ -33,7 +37,7 @@
             width: 100%;
             height: 800px;
         }
-        .banner-mid{background: url("");}
+        /*.banner-mid{}*/
         .banner-down{height: 700px;overflow: hidden;}
         .banner-down>div{
             float: left;
@@ -151,33 +155,44 @@
 
     </div>
 </div>
+<form action="背景波浪2.html">
 <div class="mian-produce2">
      <div style="left:314px;position: absolute;width: 30%;text-align: center;border: 1px solid darkgrey;">
          <h3 style="font-weight: normal;margin: 30px 0 30px 0;">Fell free to Write Us</h3>
-         <input type="text" style="background-color: transparent;border: 1px darkgrey solid;width: 80%;height: 30px;margin-bottom: 30px;padding: 4px 10px 4px 10px;" placeholder="Email">
-         <input type="text" style="background-color: transparent;border: 1px darkgrey solid;width: 80%;height: 30px;margin-bottom: 30px;padding: 4px 10px 4px 10px;" placeholder="Subject">
+         <input class="main1" type="text" style="background-color: transparent;border: 1px darkgrey solid;width: 80%;height: 30px;margin-bottom: 30px;padding: 4px 10px 4px 10px;" placeholder="Email">
+         <input class="main" type="text" style="background-color: transparent;border: 1px darkgrey solid;width: 80%;height: 30px;margin-bottom: 30px;padding: 4px 10px 4px 10px;" placeholder="Subject">
          <label>
-             <textarea style="background-color: transparent;border: 1px darkgrey solid;width: 80%;height: 140px;padding: 4px 10px 4px 10px;margin-bottom: 30px;"></textarea>
+             <textarea class="main" style="background-color: transparent;border: 1px darkgrey solid;width: 80%;height: 140px;padding: 4px 10px 4px 10px;margin-bottom: 30px;"></textarea>
          </label>
-         <input type="submit" style="background-color:black;color:white;width: calc(80% + 20px);margin-top:20px;height: 40px;border: 1px solid black;margin-bottom: 40px;" value="SEND">
+         <input class="send" type="submit" style="background-color:black;color:white;width: calc(80% + 20px);margin-top:20px;height: 40px;border: 1px solid black;margin-bottom: 40px;" value="SEND">
      </div>
     <div style="left:808px;position: absolute;">
         <img src="img/前端学院设计图-(1)_03.png">
     </div>
 
 </div>
-
+</form>
 
 <div class="footer">
 <div class="footer-p">
     <h1 style="font-family: Montserrat;font-size: 42px;font-weight: lighter;text-align: center;margin-top: 117px;color: white;">Learn More</h1>
-    <a href="">How it works?</a>
-    <a href="">Meeting tools</a>
+    <a href="背景波浪.html">提出意见</a>
+    <a href="邮件订阅.html">留下邮箱</a>
     <a href="">Live streaming</a>
     <a href="">Contact method</a>
 </div>
 
 </div>
 
+
 </body>
+<script>
+    var main = $('.main');
+    $('.send').click(function(){
+    // var str=main[2].value;
+    // console.log(main[1].value);
+    window.localStorage.name=main[1].value;
+    });
+
+</script>
 </html>
